# sfgl

./: .clang-format  .gitignore  .gitmodules  LICENSE  README.md  dprint.json  flake.nix  meson.build
examples/: example.c  meson.build  simple.c
felidae-common/: meson.build  payload.c  platform.c
felidae-common/include/felidae/common/: payload.h  platform.h
felidae-opengl/: batch.c  camera.c  context.c  graphics.c  meson.build  wrapper.c
felidae-opengl/include/felidae/opengl/: batch.h  camera.h  context.h  graphics.h  payload.h  wrapper.h
felidae-simple/: felidae.c  meson.build
felidae-simple/include/felidae/: felidae.h
felidae-windowing/: core.c  meson.build
felidae-windowing/include/felidae/windowing/: core.h  event.h
felidae-windowing/include/felidae/windowing/unix/x11/: core.h
felidae-windowing/unix/x11/: core.c  event.c
include/: meson.build
include/sfgl/: basic.h  egl.h  event.h  graphics.h  payload.h  window.h
include/sfgl/opengl/: context.h  payload.h
include/sfgl/unix/x11/: egl.h  window.h
nix/modules/flake-parts/: devshell.nix  packaging.nix
src/sfgl/: basic.c  egl.c  graphics.c  meson.build  window.c
src/sfgl/opengl/: context.c
src/sfgl/unix/x11/: egl.c  event.c  window.c
